:bug: Image height and title overflow

--- a/pages/Player.css
+++ b/pages/Player.css
@@ -1,6 +1,10 @@
 .now-playing__name {
   font-size: 1.5em;
   margin-bottom: 0.2em;
+  width: 80vw;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .now-playing__artist {
@@ -17,12 +21,16 @@
 }
 
 .now-playing__img img {
-  max-width: 80vmin;
+  max-height: 45vh;
+  max-width: 80vw;
+  margin: auto;
+  min-width: 30vw;
   width: 100%;
 }
 
 .now-playing__side {
   width: 100%;
+  padding: 2rem;
 }
 
 /** Progress **/
